--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"dependencies": {
+		"@phosphor-icons/webcomponents": "^2.0.6",
 		"html-webpack-plugin": "^5.5.4",
 		"lit": "^3.0.2"
 	},
