--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"dependencies": {
-		"html-webpack-plugin": "^5.5.4",
+		"bpmn-js": "^17.8.1",
+		"dmn-js": "^16.4.0",
 		"lit": "^3.0.2",
 		"material-symbols": "^0.19.0"
 	},
@@ -42,9 +43,11 @@
 		"@webcomponents/webcomponentsjs": "^2.8.0",
 		"copy-webpack-plugin": "^12.0.0",
 		"css-loader": "^7.0.0",
+		"html-webpack-plugin": "^5.5.4",
 		"minify-html-literals-loader": "^1.1.1",
 		"style-loader": "^4.0.0",
 		"svg-inline-loader": "^0.8.2",
+		"to-string-loader": "^1.2.0",
 		"ts-loader": "^9.4.4",
 		"typescript": "^5.3.3",
 		"webpack": "^5.88.1",
