--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"dependencies": {
+		"archimate-js": "^0.0.4",
 		"bpmn-js": "^17.8.1",
 		"dmn-js": "^16.4.0",
 		"lit": "^3.0.2",
@@ -44,7 +45,6 @@
 		"copy-webpack-plugin": "^12.0.0",
 		"css-loader": "^7.0.0",
 		"html-webpack-plugin": "^5.5.4",
-		"minify-html-literals-loader": "^1.1.1",
 		"style-loader": "^4.0.0",
 		"svg-inline-loader": "^0.8.2",
 		"to-string-loader": "^1.2.0",
