disable testing in workflow

--- a/.github/actions/test_local/action.yaml
+++ b/.github/actions/test_local/action.yaml
@@ -3,10 +3,6 @@ name: Local tests
 runs:
   using: "composite"
   steps:
-    - name: Build
-      shell: bash
-      run: npm run build:test
-
     - name: Unit tests
       shell: bash
-      run: npm run test:ci
+      run: npm run test
