--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "scripts": {
     "develop": "webpack-dev-server --mode development",
     "build": "webpack --mode production",
-    "test": "tsc -p tsconfig.test.json && wtr --coverage"
+    "test": "wdio run ./wdio.conf.ts"
   },
   "dependencies": {
     "html-webpack-plugin": "^5.5.4",
@@ -42,14 +42,19 @@
   "devDependencies": {
     "@biz-dev-ops/md-docs": "^1.0.115",
     "@open-wc/testing": "^4.0.0",
+    "@testing-library/webdriverio": "^3.2.1",
     "@types/mocha": "^10.0.6",
-    "@web/test-runner": "^0.18.2",
+    "@wdio/browser-runner": "^8.39.0",
+    "@wdio/cli": "^8.39.0",
+    "@wdio/mocha-framework": "^8.39.0",
+    "@wdio/spec-reporter": "^8.39.0",
     "@webcomponents/webcomponentsjs": "^2.8.0",
     "copy-webpack-plugin": "^12.0.0",
     "css-loader": "^7.0.0",
     "style-loader": "^4.0.0",
     "svg-inline-loader": "^0.8.2",
     "ts-loader": "^9.4.4",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "webpack": "^5.88.1",
     "webpack-cli": "^5.1.4",
