re-enable tests in github workflow

--- a/.github/workflows/pr_commit.yaml
+++ b/.github/workflows/pr_commit.yaml
@@ -19,6 +19,5 @@ jobs:
       - name: Install dependencies
         uses: ./.github/actions/install_dependencies
 
-      ### Disabled while tests pass locally and fail in the workflow
-      # - name: Run local tests
-      #   uses: ./.github/actions/test_local
+      - name: Run local tests
+        uses: ./.github/actions/test_local
