--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
   "scripts": {
     "develop": "webpack-dev-server --mode development",
     "build": "webpack --mode production",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "wdio": "wdio run ./wdio.conf.ts"
+    "test": "wdio run ./wdio.conf.ts"
   },
   "dependencies": {
     "archimate-js": "^0.0.4",
