--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@wdio/mocha-framework": "^8.39.0",
     "@wdio/spec-reporter": "^8.39.0",
     "@webcomponents/webcomponentsjs": "^2.8.0",
+    "autoprefixer": "^10.4.19",
     "copy-webpack-plugin": "^12.0.0",
     "css-loader": "^7.0.0",
     "style-loader": "^4.0.0",
