--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "test": "wdio run ./wdio.conf.ts"
   },
   "dependencies": {
+    "glob": "^10.4.2",
     "html-webpack-plugin": "^5.5.4",
     "lit": "^3.0.2",
     "lit-element": "^4.0.6",
