--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 	"dependencies": {
 		"archimate-js": "^0.0.4",
 		"bpmn-js": "^17.8.1",
+		"bpmn-moddle": "^9.0.1",
 		"dmn-js": "^16.4.0",
 		"lit": "^3.0.2",
 		"material-symbols": "^0.20.0"
