--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "noImplicitThis": true,
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
@@ -29,6 +29,6 @@
       }
     ]
   },
-  "include": ["src/**/*.ts", "globals.d.ts"],
+  "include": ["src/**/*.ts"],
   "exclude": []
 }
