--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "test": "wdio run ./wdio.conf.ts"
   },
   "dependencies": {
+    "bpmn-js": "^17.9.1",
+    "bpmn-js-token-simulation": "^0.34.2",
     "lit": "^3.0.2",
     "lit-element": "^4.0.6",
     "lit-html": "^3.1.4",
