--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "test": "wdio run ./wdio.conf.ts"
   },
   "dependencies": {
+    "bpmn-js": "^17.9.1",
     "lit": "^3.0.2",
     "lit-element": "^4.0.6",
     "lit-html": "^3.1.4",
