--- a/.github/actions/install_dependencies/action.yaml
+++ b/.github/actions/install_dependencies/action.yaml
@@ -1,12 +1,12 @@
 name: Install dependencies
-
+description: Installs dependencies.
 runs:
   using: "composite"
   steps:
     - name: Install node
       uses: actions/setup-node@v2
       with:
-        node-version: "18.x"
+        node-version: "20.x"
         registry-url: "https://registry.npmjs.org"
 
     - name: Install project dependencies
