--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@biz-dev-ops/web-components",
-  "version": "0.0.27",
+  "version": "0.0.28",
   "description": "Webcomponent to display business models.",
   "keywords": [
     "bizdevops",
@@ -35,6 +35,7 @@
   "dependencies": {
     "bpmn-js": "^18.0.0",
     "bpmn-js-token-simulation": "^0.36.0",
+    "dmn-js": "^17.0.3",
     "lit": "^3.1.4",
     "lit-element": "^4.0.6",
     "lit-html": "^3.1.4",
