--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "@wdio/spec-reporter": "9.6.3",
     "@webcomponents/webcomponentsjs": "^2.8.0",
     "autoprefixer": "^10.4.19",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.0.0",
     "glob": "^11.0.0",
     "html-webpack-plugin": "^5.5.4",
