--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   "scripts": {
     "develop": "webpack-dev-server --mode development --config webpack.config.dev.js",
     "build": "webpack --mode production --config webpack.config.js",
-    "test": "wdio run ./wdio.conf.ts"
+    "test": "wdio run ./wdio.conf.ts",
+    "test-bpmn-viewer": "wdio run ./wdio.conf.ts --spec src/bpmn-viewer/index.test.ts"
   },
   "dependencies": {
     "bpmn-js": "^18.0.0",
