--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "dist/**/*.ts.map"
   ],
   "scripts": {
-    "develop": "webpack-dev-server --mode development --config webpack.config.dev.js",
+    "develop": "webpack-dev-server --mode development --config webpack.config.js",
     "build": "webpack --mode production --config webpack.config.js",
     "test": "wdio run ./wdio.conf.ts",
     "test-bpmn-viewer": "wdio run ./wdio.conf.ts --spec src/bpmn-viewer/index.test.ts"
@@ -40,7 +40,8 @@
     "lit": "^3.1.4",
     "lit-element": "^4.0.6",
     "lit-html": "^3.1.4",
-    "material-symbols": "^0.28.0"
+    "material-symbols": "^0.28.0",
+    "yaml": "^2.7.0"
   },
   "devDependencies": {
     "@biz-dev-ops/md-docs": "^1.1.43",
