--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "test-bpmn-viewer": "wdio run ./wdio.conf.ts --spec src/bpmn-viewer/index.test.ts"
   },
   "dependencies": {
+    "@apidevtools/json-schema-ref-parser": "^11.9.1",
     "bpmn-js": "^18.0.0",
     "bpmn-js-token-simulation": "^0.36.0",
     "dmn-js": "^17.0.3",
@@ -41,6 +42,7 @@
     "lit-element": "^4.0.6",
     "lit-html": "^3.1.4",
     "material-symbols": "^0.28.0",
+    "node-polyfill-webpack-plugin": "^4.1.0",
     "yaml": "^2.7.0"
   },
   "devDependencies": {
