added file reference

--- a/src/command-viewer/_test-data/command1.yml
+++ b/src/command-viewer/_test-data/command1.yml
@@ -15,149 +15,6 @@ description: |
   Additionally, it validates the input parameters to meet necessary criteria,
   such as ensuring items have valid IDs and quantities are above zero.
 parameters:
-  title: create_order_parameters
-  type: object
-  properties:
-    order_id:
-      type: string
-      description: Unique identifier for the order.
-      example: order_12345
-    customer_id:
-      type: string
-      description: Unique identifier for the customer placing the order.
-      example: customer_789
-    order_date:
-      type: string
-      format: date-time
-      description: The date and time when the order was placed.
-      example: 2025-03-04T11:30:00Z
-    items:
-      type: array
-      description: List of items included in the order.
-      items:
-        type: object
-        properties:
-          item_id:
-            type: string
-            description: Unique identifier for the item.
-            example: item_456
-          quantity:
-            type: integer
-            minimum: 1
-            description: Quantity of the item ordered.
-            example: 2
-          unit_price:
-            type: number
-            minimum: 0
-            description: Price per unit of the item.
-            example: 19.99
-        required:
-          - item_id
-          - quantity
-          - unit_price
-    total_price:
-      type: number
-      minimum: 0
-      description: Total price of the order.
-      example: 39.98
-    shipping_address:
-      type: object
-      description: The shipping address for the order.
-      properties:
-        street:
-          type: string
-          description: Street address.
-          example: 123 Main Street
-        city:
-          type: string
-          description: City of the address.
-          example: Amsterdam
-        postal_code:
-          type: string
-          description: Postal code.
-          example: 1011AB
-        country:
-          type: string
-          description: Country of the address.
-          example: Netherlands
-      required:
-        - street
-        - city
-        - postal_code
-        - country
-  required:
-    - order_id
-    - customer_id
-    - order_date
-    - items
-    - total_price
-    - shipping_address
+  $ref: "./parameters1.yml"
 exceptions:
-  invalid_customer_id:
-    name: Invalid Customer ID exception
-    description: The provided customer ID is invalid or does not exist in the system.
-    parameters:
-      type: object
-      description: Detailed information about the exception.
-      properties:
-        customer_id:
-          type: string
-          description: The provided customer ID, applicable for invalid_customer_id exception.
-          example: customer_789
-        message:
-          type: string
-          description: Human-readable message explaining the exception.
-          example: |
-            The provided customer ID is invalid or does not exist in the system.
-            Please ensure the customer ID is correct and try again.
-      required:
-        - customer_id
-        - message
-  out_of_stock:
-    name: Out of stock exception
-    description: One or more items in the order are out of stock.
-    parameters:
-      type: object
-      description: Detailed information about the exception.
-      properties:
-        unavailable_items:
-          type: array
-          description: List of item IDs that are out of stock, applicable for out_of_stock exception.
-          items:
-            type: string
-          example:
-            - item_456
-            - item_789
-        message:
-          type: string
-          description: Human-readable message explaining the exception.
-          example: |
-            The following items are out of stock:
-            - item_456
-            - item_789
-            Please remove these items from the order and try again.
-      required:
-        - unavailable_items
-        - message
-  payment_failure:
-    name: payment_failure exception
-    description: |
-      The payment for the order has failed due to an error.
-      The error code provides more information about the specific payment issue.
-    parameters:
-      type: object
-      description: Detailed information about the exception.
-      properties:
-        payment_error_code:
-          type: string
-          description: Error code for the payment failure, applicable for payment_failure exception.
-          example: ERR_PAYMENT_DECLINED
-        message:
-          type: string
-          description: Human-readable message explaining the exception.
-          example: |
-            The payment for the order has failed due to an error.
-            Please try again or contact customer support for assistance.
-      required:
-        - payment_error_code
-        - message
+  $ref: "./exceptions1.yml"
