--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   ],
   "scripts": {
     "develop": "webpack-dev-server --mode development --config webpack.config.dev.js",
-    "build": "webpack --mode production --config webpack.config.js",
+    "build": "vite build",
+    "dev": "vite serve",
     "test": "wdio run ./wdio.conf.ts"
   },
   "dependencies": {
@@ -45,7 +46,7 @@
     "@biz-dev-ops/md-docs": "^1.1.43",
     "@testing-library/webdriverio": "^3.2.1",
     "@types/mocha": "^10.0.6",
-    "@wdio/browser-runner": "8.39.1",
+    "@wdio/browser-runner": "^9.9.3",
     "@wdio/cli": "9.8.0",
     "@wdio/mocha-framework": "9.7.3",
     "@wdio/spec-reporter": "9.8.0",
@@ -63,7 +64,8 @@
     "typescript": "^5.3.3",
     "webpack": "^5.88.1",
     "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.0.0"
+    "webpack-dev-server": "^5.0.0",
+    "vite": "^5.4.10"
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "^4.18.0"
