--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es2017",
-    "module": "es2015",
+    "module": "ESNext",
     "lib": ["ES2021", "dom"],
     "declaration": true,
     "declarationMap": true,
