--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,13 @@ tests/release/
 .DS_Store
 
 private/
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
