--- a/package.json
+++ b/package.json
@@ -47,12 +47,14 @@
   },
   "devDependencies": {
     "@sand4rt/experimental-ct-web": "^1.51.0",
+    "@playwright/experimental-ct-core": "^1.51.0",
     "@types/mocha": "^10.0.6",
     "@types/node": "^22.13.9",
     "@webcomponents/webcomponentsjs": "^2.8.0",
     "autoprefixer": "^10.4.19",
     "glob": "^11.0.0",
     "msw": "^2.7.3",
+    "terser": "^5.39.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "vite": "^5.4.10",
