--- a/package.json
+++ b/package.json
@@ -28,31 +28,31 @@
     "dist/**/*.ts.map"
   ],
   "scripts": {
-    "build": "vite build",
+    "build": "vite build --emptyOutDir",
     "develop": "vite dev",
     "dev": "npm run develop",
     "test": "playwright test -c playwright-ct.config.ts"
   },
   "dependencies": {
-    "@apidevtools/json-schema-ref-parser": "^11.9.1",
-    "bpmn-js": "^18.0.0",
-    "bpmn-js-token-simulation": "^0.36.0",
-    "dmn-js": "^17.0.3",
-    "lit": "^3.1.4",
-    "marked": "^15.0.6",
-    "material-symbols": "^0.28.0",
+    "@apidevtools/json-schema-ref-parser": "^11.9.3",
+    "bpmn-js": "^18.3.1",
+    "bpmn-js-token-simulation": "^0.38.0",
+    "dmn-js": "^17.2.0",
+    "lit": "^3.2.1",
+    "marked": "^15.0.7",
+    "material-symbols": "^0.29.1",
     "yaml": "^2.7.0"
   },
   "devDependencies": {
     "@playwright/experimental-ct-core": "^1.51.0",
     "@sand4rt/experimental-ct-web": "^1.51.0",
-    "@types/node": "^22.13.9",
-    "autoprefixer": "^10.4.19",
-    "glob": "^11.0.0",
+    "@types/node": "^22.13.10",
+    "autoprefixer": "^10.4.21",
+    "glob": "^11.0.1",
     "msw": "^2.7.3",
     "terser": "^5.39.0",
-    "typescript": "^5.3.3",
-    "vite": "^5.4.10",
+    "typescript": "^5.8.2",
+    "vite": "^6.2.1",
     "vite-plugin-node-polyfills": "^0.23.0"
   }
 }
