--- a/package.json
+++ b/package.json
@@ -39,13 +39,14 @@
     "bpmn-js-token-simulation": "^0.38.0",
     "dmn-js": "^17.2.0",
     "lit": "^3.2.1",
-    "marked": "^15.0.7",
+    "markdown-it": "^14.1.0",
     "material-symbols": "^0.29.1",
     "yaml": "^2.7.0"
   },
   "devDependencies": {
     "@playwright/experimental-ct-core": "^1.51.0",
     "@sand4rt/experimental-ct-web": "^1.51.0",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^22.13.10",
     "autoprefixer": "^10.4.21",
     "glob": "^11.0.1",
