--- a/package.json
+++ b/package.json
@@ -55,5 +55,8 @@
     "typescript": "^5.8.2",
     "vite": "^6.2.1",
     "vite-plugin-node-polyfills": "^0.23.0"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.18.0"
   }
 }
