npx playwright install

--- a/.github/actions/install_dependencies/action.yaml
+++ b/.github/actions/install_dependencies/action.yaml
@@ -12,3 +12,7 @@ runs:
     - name: Install project dependencies
       shell: bash
       run: npm ci
+
+    - name: Install playwright
+      shell: bash
+      run: npx playwright install
