--- a/.github/actions/install_dependencies/action.yaml
+++ b/.github/actions/install_dependencies/action.yaml
@@ -4,15 +4,12 @@ runs:
   using: "composite"
   steps:
     - name: Install node
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v4
       with:
-        node-version: "20.x"
-        registry-url: "https://registry.npmjs.org"
+        node-version: lts/*
 
     - name: Install project dependencies
-      shell: bash
       run: npm ci
 
-    - name: Install playwright
-      shell: bash
-      run: npx playwright install
+    - name: Install Playwright Browsers
+      run: npx playwright install --with-deps
