--- a/.github/actions/test_local/action.yaml
+++ b/.github/actions/test_local/action.yaml
@@ -3,6 +3,14 @@ description: Run tests.
 runs:
   using: "composite"
   steps:
-    - name: Unit tests
+    - name: Test
       shell: bash
       run: npm run test
+
+    - name: Upload test report
+      uses: actions/upload-artifact@v4
+      if: ${{ !cancelled() }}
+      with:
+        name: playwright-report
+        path: playwright-report/
+        retention-days: 30
