--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "lit": "^3.2.1",
     "markdown-it": "^14.1.0",
     "material-symbols": "^0.29.1",
+    "plantuml-encoder": "^1.4.0",
     "yaml": "^2.7.0"
   },
   "devDependencies": {
