--- a/package.json
+++ b/package.json
@@ -35,17 +35,19 @@
   },
   "dependencies": {
     "@apidevtools/json-schema-ref-parser": "^11.9.3",
+    "@types/mermaid": "^9.1.0",
     "bpmn-js": "^18.3.1",
     "bpmn-js-token-simulation": "^0.38.0",
     "dmn-js": "^17.2.0",
     "lit": "^3.2.1",
     "markdown-it": "^14.1.0",
     "material-symbols": "^0.29.1",
+    "mermaid": "^11.5.0",
     "yaml": "^2.7.0"
   },
   "devDependencies": {
-    "@sand4rt/experimental-ct-web": "^1.51.0",
     "@playwright/experimental-ct-core": "^1.51.0",
+    "@sand4rt/experimental-ct-web": "^1.51.0",
     "@types/markdown-it": "^14.1.2",
     "@types/node": "^22.13.10",
     "autoprefixer": "^10.4.21",
