--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "build": "vite build --emptyOutDir",
     "develop": "vite dev",
     "dev": "npm run develop",
-    "test": "playwright test -c playwright-ct.config.ts"
+    "test": "npx playwright test -c playwright-ct.config.ts"
   },
   "dependencies": {
     "@apidevtools/json-schema-ref-parser": "^11.9.3",
@@ -46,7 +46,6 @@
     "yaml": "^2.7.0"
   },
   "devDependencies": {
-    "@playwright/experimental-ct-core": "^1.51.0",
     "@sand4rt/experimental-ct-web": "^1.51.0",
     "@types/markdown-it": "^14.1.2",
     "@types/node": "^22.13.10",
