--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@apidevtools/json-schema-ref-parser": "^11.9.3",
+    "@cucumber/gherkin": "^32.0.0",
     "bpmn-js": "^18.3.1",
     "bpmn-js-token-simulation": "^0.38.0",
     "dmn-js": "^17.2.0",
