--- a/specs/markdown-viewer/examples/payroll-service/calculate-payroll/get-time-and-attendance.model.yml
+++ b/specs/markdown-viewer/examples/payroll-service/calculate-payroll/get-time-and-attendance.model.yml
@@ -32,9 +32,10 @@ properties:
         example: "2024-01-31"
   response:
     type: array
-    title: time and attendance records
     description: Array of time and attendance records
     items:
+      title: time and attendance record
+      description: A record of time and attendance for an employee
       type: object
       required:
         - date
@@ -70,5 +71,4 @@ properties:
           example: "This is a note"
   exceptions:
     oneOf:
-      - type: object
-        title: employee not found
+      - $ref: "../_data-dictionary/exceptions/employee-not-found.yml"
