--- a/package.json
+++ b/package.json
@@ -36,14 +36,17 @@
   "dependencies": {
     "@apidevtools/json-schema-ref-parser": "^11.9.3",
     "@cucumber/gherkin": "^32.0.0",
+    "ajv": "^8.17.1",
     "bpmn-js": "^18.3.1",
     "bpmn-js-token-simulation": "^0.38.0",
     "dmn-js": "^17.2.0",
+    "js-yaml": "^4.1.0",
     "lit": "^3.2.1",
     "markdown-it": "^14.1.0",
     "material-symbols": "^0.29.1",
     "mermaid": "^11.5.0",
-    "yaml": "^2.7.0"
+    "yaml": "^2.7.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@sand4rt/experimental-ct-web": "^1.51.0",
