--- a/specs/markdown-viewer/examples/payroll-service/calculate-payroll/get-time-and-attendance.query.yml
+++ b/specs/markdown-viewer/examples/payroll-service/calculate-payroll/get-time-and-attendance.query.yml
@@ -1,11 +1,14 @@
 ---
 title: get time and attandance
 description: |
-  Ensures that all relevant work and absence information for the pay period is gathered, verified, and prepared for the subsequent steps in the payroll calculation.
+  Ensures that all relevant work and absence information for the pay period is
+  gathered, verified, and prepared for the subsequent steps in the
+  payroll calculation.
 type: object
 required:
   - parameters
   - response
+  - exceptions
 properties:
   parameters:
     type: object
@@ -18,21 +21,26 @@ properties:
         type: string
         description: The ID of the employee to calculate the payroll for.
         pattern: ^\d{10}$
-        example: "1234567890"
+        examples:
+          - "1234567890"
       start_date:
         type: string
         format: date
         description: The start date of the payroll period.
-        example: "2024-01-01"
+        examples:
+          - "2024-01-01"
       end_date:
         type: string
         format: date
         description: The end date of the payroll period.
-        example: "2024-01-31"
+        examples:
+          - "2024-01-31"
   response:
     type: array
     description: Array of time and attendance records
     items:
+      title: time and attendance record
+      description: A record of time and attendance for an employee
       type: object
       required:
         - date
@@ -43,7 +51,8 @@ properties:
           type: string
           format: date
           description: The date of the time entry
-          example: "2024-01-01"
+          examples:
+            - "2024-01-01"
         hours:
           oneOf:
             - type: object
@@ -60,12 +69,14 @@ properties:
             - submitted
             - approved
             - rejected
-          example: "submitted"
+          examples:
+            - "submitted"
         notes:
           type: string
           nullable: true
           description: Any relevant notes or comments about the time entry
-          example: "This is a note"
+          examples:
+            - "This is a note"
   exceptions:
     oneOf:
       - $ref: "../_data-dictionary/exceptions/employee-not-found.yml"
