--- a/specs/markdown-viewer/examples/payroll-service/calculate-payroll/index.command.yml
+++ b/specs/markdown-viewer/examples/payroll-service/calculate-payroll/index.command.yml
@@ -17,14 +17,17 @@ properties:
         type: string
         description: The ID of the employee to calculate the payroll for.
         pattern: ^\d{10}$
-        example: "1234567890"
+        examples:
+          - "1234567890"
       start_date:
         type: string
         format: date
         description: The start date of the payroll period.
-        example: "2024-01-01"
+        examples:
+          - "2024-01-01"
       end_date:
         type: string
         format: date
         description: The end date of the payroll period.
-        example: "2024-01-31"
+        examples:
+          - "2024-01-31"
