--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@cucumber/gherkin": "^32.0.0",
+    "@cucumber/messages": "^27.2.0",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
     "bpmn-js": "^18.3.1",
@@ -44,12 +45,13 @@
     "markdown-it": "^14.1.0",
     "material-symbols": "^0.31.1",
     "mermaid": "^11.5.0",
+    "reflect-metadata": "^0.2.2",
     "yaml": "^2.7.0"
   },
   "devDependencies": {
+    "@playwright/experimental-ct-core": "^1.51.0",
     "@sand4rt/experimental-ct-web": "^1.51.0",
     "@types/markdown-it": "^14.1.2",
-    "@types/mermaid": "^9.1.0",
     "@types/node": "^22.13.10",
     "autoprefixer": "^10.4.21",
     "glob": "^11.0.1",
